--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "webpack-react-tutorial",
+  "name": "project-money",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "eslint": "^4.19.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
@@ -17,6 +19,8 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "sass-loader": "^7.0.1",
+    "standard": "^11.0.1",
+    "standard-loader": "^6.0.1",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4"
