--- a/package.json
+++ b/package.json
@@ -3,26 +3,29 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "prop-types": "^15.6.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.0",
     "node-sass": "^4.9.0",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "sass-loader": "^7.0.1",
+    "sass-loader": "^7.0.3",
     "standard": "^11.0.1",
     "standard-loader": "^6.0.1",
-    "webpack": "^4.8.2",
-    "webpack-cli": "^2.1.3",
+    "webpack": "^4.12.0",
+    "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
