--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "moment": "^2.22.2",
+    "normalize.css": "^8.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
@@ -25,6 +26,7 @@
     "sass-loader": "^7.0.3",
     "standard": "^11.0.1",
     "standard-loader": "^6.0.1",
+    "style-loader": "^0.21.0",
     "webpack": "^4.12.0",
     "webpack-cli": "^2.1.5",
     "webpack-dev-server": "^3.1.4"
